--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>cloud-providerconsul8006</module>
         <module>cloud-consumerconsul-order80</module>
         <module>yafei-mybatis-spring-boot-starter</module>
+        <module>cloud-consumer-feign-order80</module>
     </modules>
 
     <!--统一管理jar包版本-->
